# emotion-system

./: README.md  main.py  pyproject.toml  test.py
models/: audio_model.py  fusion.py  fusion_model.py  visual_model.py
streaming/: audio_stream.py  camera.py
utils/: entrophy.py  entropy.py  fusion.py  smoothing.py
